fix some modal layout issues and put the sample back in

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -7,12 +7,14 @@ input[type="submit"][disabled] {
 }
 
 .modal {
-  position: relative;
-  margin: 10px auto;
+  position: absolute;
+//  margin: 10px auto;
   min-width: 300px;
   max-width: 500px;
   background-color: #fff;
   padding: 1em;
+  top: 25%;
+  left: 30%;
 }
 
 .overlay {
@@ -21,7 +23,7 @@ input[type="submit"][disabled] {
   position: fixed;
   top: 0;
   left: 0;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .flush--top {
